--- a/index.html
+++ b/index.html
@@ -119,96 +119,64 @@
     <!-- Footer -->
     <div class="container-fluid p-0" class="footer">
         <footer class="p-5">
-            <div class="row">
-                <div class="col-6 col-md-2 mb-3">
-                    <h6>ATS Software</h6>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link
-                                p-0 text-body-secondary">ATS
-                                Software</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Features</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Pricing</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">About</a>
-                        </li>
+            <div class="row justify-content-between">
+                <div class="col-12 col-md-2 mb-3">
+                    <a href="pages/software.html">
+                        <h5>ATS Software</h5>
+                    </a>
+                    <ul class="nav d-none d-md-flex">
+                        <li class="mb-2">ATS 1040 Desktop</li>
+                        <li class="mb-2">ATS 1040 Online</li>
+                        <li class="mb-2">ATS Corporations</li>
+                        <li class="mb-2">ATS Bookkeeping</li>
+                        <li class="mb-2">ATS Payroll</li>
                     </ul>
                 </div>
 
-                <div class="col-6 col-md-2 mb-3">
-                    <h5>Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Features</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Pricing</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">About</a>
-                        </li>
+                <div class="col-12 col-md-2 mb-3">
+                    <a href="pages/training.html">
+                        <h5>Training</h5>
+                    </a>
+                    <ul class="nav d-none d-md-flex">
+                        <li class="mb-2">ATS Online 20hrs Renewal Course</li>
+                        <li class="mb-2">ATS Classroom 20hrs Renewal Course</li>
+                        <li class="mb-2">ATS Online 60hrs Certification Course</li>
+                        <li class="mb-2">ATS Classroom 60hrs Certification Course</li>
                     </ul>
                 </div>
 
-                <div class="col-6 col-md-2 mb-3">
-                    <h5>Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Features</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">Pricing</a>
-                        </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link
-                                p-0 text-body-secondary">About</a>
-                        </li>
+                <div class="col-12 col-md-3 mb-3">
+                    <a href="pages/software.html">
+                        <h5>Business Software</h5>
+                    </a>
+                    <ul class="nav d-none d-md-flex">
+                        <li class="mb-2">ATS Online Backup</li>
+                        <li class="mb-2">ATS Antivirus</li>
+                        <li class="mb-2">ATS Office365</li>
+                        <li class="mb-2">ATS Remote Desktop</li>
                     </ul>
                 </div>
 
-                <div class="col-md-5 offset-md-1 mb-3">
+                <div class="col-md-4 mb-3">
                     <form>
                         <h5>Subscribe to our newsletter</h5>
-                        <p>Monthly digest of what's new and exciting from us.</p>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                            <input id="newsletter1" type="text" class="form-control" placeholder="Email
-                                address">
-                            <button class="btn btn-primary" type="button">Subscribe</button>
+                        <div class="row">
+                            <div class="col-8">
+                                <input id="newsletter1" type="text" class="form-control" placeholder="Email
+                                ">
+                            </div>
+                            <div class="col-3">
+                                <button class="btn btn-primary" type="button">Subscribe</button>
+                            </div>
                         </div>
                     </form>
                 </div>
             </div>
 
-            <div class="d-flex flex-column flex-sm-row justify-content-between
-                py-4 my-4 border-top">
+            <div class="d-flex flex-column flex-sm-row justify-content-center
+                pt-4 mt-4 border-top">
                 <p>&copy; 2023 Azteca Tax services. All rights reserved.</p>
-                <ul class="list-unstyled d-flex">
-                    <li class="ms-3">
-                        <a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#twitter" />
-                            </svg></a>
-                    </li>
-                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#instagram" />
-                            </svg></a></li>
-                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#facebook" />
-                            </svg></a></li>
-                </ul>
+
             </div>
         </footer>
     </div>
