--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,19 +64,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
             <ul class="navbar nav bar-expand-sm justify-content-end" id="options">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/software.html">Software</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/hardware.html">Hardware</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="pages/training.html">Training</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/licensing.html">Licensing</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="hardware.html">Hardware</a></li>
+                <li class="nav-item"><a class="nav-link" href="training.html">Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="licensing.html">Licensing</a></li>
+                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -86,12 +80,43 @@
 
 
     <!-- Contenedor principal-->
-    <div class="container-fluid p-0">
-        <div class="row">
+    <div class="container-fluid p-0 mt-5">
+        <div class="row content">
+            <div class="col-12 col-md-6 p-5">
 
+            </div>
+            <div class="col-12 col-md-6 col-info p-5">
+                <h2 class="mb-3">Our contact information</h2>
+                <p><b>Phone:</b> <br />
+                    714-363-0006
+                </p>
+
+                <p><b>Email:</b> <br />
+                    support@aztecataxsystems.com
+                </p>
+
+                <p><b>Address:</b> <br />
+                    2525 N. Grand Avenue, Suite H Santa Ana, CA 92705
+                </p>
+
+                <p><strong>Business Hours:</strong> <br />
+                    <br />
+                    <b> In tax season (January - April)</b><br />
+                    Monday - Friday: 8 AM - 9 PM <br />
+                    Saturday & Sunday: 9 AM - 5 PM<br />
+                    <br />
+                    <b> Off tax season</b><br />
+                    Monday - Friday: 9 AM - 6 PM <br />
+                    Saturday & Sunday: CLOSED
+                </p>
+            </div>
         </div>
-
-
+        <div class="row">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3313.8505288353285!2d-117.83470528442113!3d33.84196513622873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd994524df2ad%3A0x8bd589fa55348c9c!2sAzteca%20Tax%20Systems!5e0!3m2!1ses!2sar!4v1679419561350!5m2!1ses!2sar"
+                height="500px" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -193,3 +218,17 @@
 </body>
 
 </html>
+
+<style>
+    .content {
+        justify-content: space-around;
+        text-align: left;
+        border-top: 2px solid #f2b138;
+        border-bottom: 2px solid #f2b138;
+    }
+
+    .col-info {
+        background: #f2b138;
+        font-size: larger;
+    }
+</style>
