--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
         <!-- Logo -->
         <div id="logo">
             <a href="index.html" class="navbar-brand">
-                <img width="20%" src="rsc/logo/logo.png" alt="ATS Logo" />
+                <img width="100%" src="rsc/logo/logo.png" alt="ATS Logo" />
             </a>
         </div>
 
@@ -68,18 +68,11 @@
         </button>
 
         <!-- Options Menu -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
-            <ul class="navbar nav bar-expand-sm justify-content-end" id="options">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/software.html">Software</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/hardware.html">Hardware</a>
-                </li>
+        <div class="collapse navbar-collapse col-10" id="collapsibleNavbar">
+            <ul class="navbar nav bar-expand-sm" id="options">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/hardware.html">Hardware</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/training.html">Training</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/licensing.html">Licensing</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/support.html">Support</a></li>
