--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -94,30 +94,32 @@
 
 
     <!-- Contenedor principal-->
-    <div class="container p-0" id="container">
-        <div class="row mt-5">
-            <div class="col-6 col-md-2">
+    <div class="container p-0 mb-5" id="container">
+        <div class="row mt-5 mb-3">
+            <div class="col-6 col-md-2 text-center">
                 <button size="lg" class="btn btn-warning" id="todos">All items</button>
             </div>
-            <div class="col-6 col-md-2">
-                <button size="lg" class="btn btn-warning" id="signa">Signature pads</b-button>
+            <div class="col-6 col-md-2 text-center">
+                <button size="lg" class="btn btn-warning" id="signature_pads">Signature pads</b-button>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-6 col-md-2 text-center">
                 <b-button size="lg" class="btn btn-warning" id="scanners">Scanners</b-button>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-6 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="workstations">Work Stations</b-button>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-6 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="monitors">Monitors</b-button>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-6 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="laptops">Laptops</b-button>
             </div>
         </div>
-        <div class="row" class="mt-5" id="prods">
+
+        <div class="row  justify-content-center" class="mt-5" id="prods">
 
         </div>
+
         <div id="modal">
             <div class="container-fluid" id="modal-content">
                 <div class="row">
