--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -44,12 +44,24 @@
 <body>
     <!-- Contact bar -->
     <div class="container-fluid" id="contact-navbar">
-        <div class="row justify-content-between py-2">
-            <div class="col-5">
-                <p class="m-0"><strong>Download </strong> demo</p>
-            </div>
-            <div class="col-5">
-                <p class="m-0"><strong>Download </strong> demo</p>
+        <div class="row justify-content-center py-2">
+            <div class="col-11 col-md-8">
+                <div class="row justify-content-between">
+                    <div class="col-5">
+                        <p class="m-0"><strong>Download </strong> demo</p>
+                    </div>
+                    <div class="col-3 align-content-end justify-content-around">
+                        <a href="https://twitter.com/aztecataxes" target="_blank">
+                            <img src="../rsc/icons/twitter.svg" alt="twitter" />
+                        </a>
+                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                            <img src="../rsc/icons/facebook.svg" alt="facebook" />
+                        </a>
+                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                            <img src="../rsc/icons/instagram.svg" alt="instagram" />
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -58,7 +70,7 @@
     <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
         <!-- Logo -->
         <div id="logo">
-            <a href="index.html" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
         </div>
@@ -71,7 +83,7 @@
         <!-- Options Menu -->
         <div class="collapse navbar-collapse col-10" id="collapsibleNavbar">
             <ul class="navbar nav bar-expand-sm" id="options">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="software.html">Software</a></li>
                 <li class="nav-item"><a class="nav-link" href="hardware.html">Hardware</a></li>
                 <li class="nav-item"><a class="nav-link" href="training.html">Training</a></li>
