--- a/pages/support.html
+++ b/pages/support.html
@@ -36,20 +36,33 @@
 <body>
     <!-- Contact bar -->
     <div class="container-fluid" id="contact-navbar">
-        <div class="row justify-content-between py-2">
-            <div class="col-5">
-                <p class="m-0"><strong>Download </strong> demo</p>
-            </div>
-            <div class="col-5">
-                <p class="m-0"><strong>Download </strong> demo</p>
+        <div class="row justify-content-center py-2">
+            <div class="col-11 col-md-8">
+                <div class="row justify-content-between">
+                    <div class="col-5">
+                        <p class="m-0"><strong>Download </strong> demo</p>
+                    </div>
+                    <div class="col-3 align-content-end justify-content-around">
+                        <a href="https://twitter.com/aztecataxes" target="_blank">
+                            <img src="../rsc/icons/twitter.svg" alt="twitter" />
+                        </a>
+                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                            <img src="../rsc/icons/facebook.svg" alt="facebook" />
+                        </a>
+                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                            <img src="../rsc/icons/instagram.svg" alt="instagram" />
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <!-- Nav Bar -->
     <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
         <!-- Logo -->
         <div id="logo">
-            <a href="index.html" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
         </div>
@@ -62,7 +75,7 @@
         <!-- Options Menu -->
         <div class="collapse navbar-collapse col-10" id="collapsibleNavbar">
             <ul class="navbar nav bar-expand-sm" id="options">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="software.html">Software</a></li>
                 <li class="nav-item"><a class="nav-link" href="hardware.html">Hardware</a></li>
                 <li class="nav-item"><a class="nav-link" href="training.html">Training</a></li>
@@ -81,7 +94,7 @@
     <div class="container-fluid p-0">
         <!-- Banner -->
         <header class="sectionTitle">
-            <h1>How can we help you today?</h1>
+            <h1 class="orange">How can we help you today?</h1>
             <h2 class="text-center">We support you in every step through the process.</h2>
         </header>
 
@@ -97,7 +110,20 @@
                     tabindex="-1" role="button">
                     Download Teamviewer
                 </a>
+            </div>
+        </div>
 
+        <div class="row justify-content-center text-center mb-5">
+            <div class="col-8">
+                <div class="row align-items-center cont-info  p-5">
+                    <div class="col-12 col-md-6">
+                        <h2 class="titulo"><b>CALL US!</b></h2>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p><b>Phone: </b><br />714-363-0006</p>
+                        <p><b>Email: </b><br />support@aztecataxsystems.com</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -177,5 +203,24 @@
         background-size: cover;
         background-position-y: center;
         color: white;
+    }
+
+    .cont-info {
+        background: #f2b138;
+        border-radius: 8px;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .titulo {
+        font-size: 3em;
+    }
+
+    .cont-info {
+        font-size: 1.3em;
+    }
+
+    .orange {
+        color: #f2b138
     }
 </style>
