--- a/pages/licensing.html
+++ b/pages/licensing.html
@@ -48,7 +48,7 @@
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
                     <div class="col-5">
-                        <p class="m-0"><strong>Download </strong> demo</p>
+                        <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
                     <div class="col-3 align-content-end justify-content-around">
                         <a href="https://twitter.com/aztecataxes" target="_blank">
@@ -193,5 +193,11 @@
         align-items: center;
         justify-content: space-between;
         text-align: center;
+    }
+
+    .call {
+        font-size: xx-large;
+        color: #f2b138;
+        font-weight: bold;
     }
 </style>
