--- a/pages/training.html
+++ b/pages/training.html
@@ -48,7 +48,7 @@
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
                     <div class="col-5">
-                        <p class="m-0"><strong>Download </strong> demo</p>
+                        <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
                     <div class="col-3 align-content-end justify-content-around">
                         <a href="https://twitter.com/aztecataxes" target="_blank">
