--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
 
     #banner1 {
         background-image: url(rsc/home/banner1.jpg);
-        background-size: contain;
+        background-size: cover;
         height: 475px;
     }
 
     #banner2 {
         background-image: url(rsc/home/banner2.jpg);
-        background-size: contain;
+        background-size: cover;
         height: 475px;
     }
 
     #banner3 {
         background-image: url(rsc/home/banner3.jpg);
-        background-size: contain;
+        background-size: cover;
         height: 475px;
     }
 
