--- a/pages/training.html
+++ b/pages/training.html
@@ -102,13 +102,9 @@
     </header>
 
     <!-- Contenedor principal-->
-    <div class="container p-0" id="container">
-        <div class="row mt-5">
-            <div class="col-6 col-md-2">
-                <button size="lg" class="btn btn-warning" id="todos">All clases</button>
-            </div>
-        </div>
-        <div class="row" class="mt-5" id="prods">
+    <div class="container p-0 mt-5 mb-5" id="container">
+
+        <div class="row justify-content-around" id="clases">
 
         </div>
         <div id="modal">
@@ -122,6 +118,7 @@
             </div>
         </div>
     </div>
+
     <!-- Footer -->
     <div class="container-fluid p-0" class="footer">
         <footer class="p-5">
@@ -186,7 +183,7 @@
             </div>
         </footer>
     </div>
-
+    <script src="../data/training.js"></script>
 </body>
 
 </html>
