navbar, contact, support y contact ready

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
                     <div class="col-5">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-3 align-content-end justify-content-around">
-                        <a href="https://twitter.com/aztecataxes" target="_blank">
-                            <img src="rsc/icons/twitter.svg" alt="twitter" />
-                        </a>
-                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
-                            <img src="rsc/icons/facebook.svg" alt="facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
-                            <img src="rsc/icons/instagram.svg" alt="instagram" />
-                        </a>
+                    <div class="col-2 align-content-end">
+                        <div class="row justify-content-between">
+                            <a href="https://twitter.com/aztecataxes" target="_blank">
+                                <img src="rsc/icons/twitter.svg" alt="twitter" />
+                            </a>
+                            <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                                <img src="rsc/icons/facebook.svg" alt="facebook" />
+                            </a>
+                            <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                                <img src="rsc/icons/instagram.svg" alt="instagram" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -120,38 +122,37 @@
             </a>
         </div>
 
-        <h1 class="my-5" style="color:#489cbd">Our offer</h1>
+        <h1 class="m-0 my-5" style="color:#489cbd">Our offer</h1>
 
-        <div class="row p-5" id="banner1" data-aos="fade-left">
+        <div class="row p-5 m-0" id="banner1" data-aos="fade-left">
             <div class="col-6 contenido">
                 <h2 class="mb-4" id="titulo-b1"></h2>
                 <div id="cont-b1"></div>
             </div>
         </div>
-        <div class="row p-5" id="banner2" data-aos="fade-right">
+        <div class="row p-5 m-0" id="banner2" data-aos="fade-right">
             <div class="col-6 contenido">
                 <h2 class="mb-4" id="titulo-b2"></h2>
                 <div id="cont-b2"></div>
-
             </div>
         </div>
-        <div class="row p-5" id="banner3" data-aos="fade-left">
+        <div class="row p-5 m-0" id="banner3" data-aos="fade-left">
             <div class="col-6 contenido">
                 <h2 class="mb-4" id="titulo-b3"></h2>
                 <div id="cont-b3"></div>
             </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center text-center my-5">
-        <div class="col-8">
-            <div class="row align-items-center cont-info  p-5">
-                <div class="col-12 col-md-6">
-                    <h2 class="titulo"><b>CALL US!</b></h2>
-                </div>
-                <div class="col-12 col-md-6">
-                    <p><b>Phone: </b><br />714-363-0006</p>
-                    <p><b>Email: </b><br />support@aztecataxsystems.com</p>
+        <div class="row justify-content-center text-center my-5">
+            <div class="col-8">
+                <div class="row align-items-center cont-info  p-5">
+                    <div class="col-12 col-md-6">
+                        <h2 class="titulo"><b>CALL US!</b></h2>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p><b>Phone: </b><br />714-363-0006</p>
+                        <p><b>Email: </b><br />support@aztecataxsystems.com</p>
+                    </div>
                 </div>
             </div>
         </div>
