--- a/pages/training.html
+++ b/pages/training.html
@@ -50,16 +50,18 @@
                     <div class="col-5">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-3 align-content-end justify-content-around">
-                        <a href="https://twitter.com/aztecataxes" target="_blank">
-                            <img src="../rsc/icons/twitter.svg" alt="twitter" />
-                        </a>
-                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/facebook.svg" alt="facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/instagram.svg" alt="instagram" />
-                        </a>
+                    <div class="col-2 align-content-end">
+                        <div class="row justify-content-between">
+                            <a href="https://twitter.com/aztecataxes" target="_blank">
+                                <img src="../rsc/icons/twitter.svg" alt="twitter" />
+                            </a>
+                            <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/facebook.svg" alt="facebook" />
+                            </a>
+                            <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/instagram.svg" alt="instagram" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
