--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,16 +42,18 @@
                     <div class="col-5">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-3 align-content-end justify-content-around">
-                        <a href="https://twitter.com/aztecataxes" target="_blank">
-                            <img src="../rsc/icons/twitter.svg" alt="twitter" />
-                        </a>
-                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/facebook.svg" alt="facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/instagram.svg" alt="instagram" />
-                        </a>
+                    <div class="col-2 align-content-end">
+                        <div class="row justify-content-between">
+                            <a href="https://twitter.com/aztecataxes" target="_blank">
+                                <img src="../rsc/icons/twitter.svg" alt="twitter" />
+                            </a>
+                            <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/facebook.svg" alt="facebook" />
+                            </a>
+                            <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/instagram.svg" alt="instagram" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -86,17 +88,12 @@
         </div>
     </nav>
 
-
-
     <!-- Animación -->
     <script>AOS.init();</script>
 
-
-
     <!-- Contenedor principal-->
-    <div class="container-fluid p-0 mt-5">
-        <div class="row content">
-
+    <div class="container-fluid p-0 mt-5" data-aos="fade-down">
+        <div class="row content m-0">
             <div class="col-12 col-md-6 p-5">
                 <h2><b>Contact us!</b></h2>
                 <h6 class="mb-3">Our team is always avaliable to talk to you!</h6>
@@ -166,7 +163,7 @@
                 </p>
             </div>
         </div>
-        <div class="row p-0" style="height: 500px">
+        <div class="row p-0  m-0" style="height: 500px">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3313.8505288353285!2d-117.83470528442113!3d33.84196513622873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd994524df2ad%3A0x8bd589fa55348c9c!2sAzteca%20Tax%20Systems!5e0!3m2!1ses!2sar!4v1679419561350!5m2!1ses!2sar"
                 height="500px" style="border: 0" allowfullscreen="" loading="lazy"
@@ -241,17 +238,3 @@
 </body>
 
 </html>
-
-<style>
-    .content {
-        justify-content: space-around;
-        text-align: left;
-        border-top: 2px solid #f2b138;
-        border-bottom: 2px solid #f2b138;
-    }
-
-    .col-info {
-        background: #f2b138;
-        font-size: larger;
-    }
-</style>
