--- a/pages/support.html
+++ b/pages/support.html
@@ -42,16 +42,18 @@
                     <div class="col-5">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-3 align-content-end justify-content-around">
-                        <a href="https://twitter.com/aztecataxes" target="_blank">
-                            <img src="../rsc/icons/twitter.svg" alt="twitter" />
-                        </a>
-                        <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/facebook.svg" alt="facebook" />
-                        </a>
-                        <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
-                            <img src="../rsc/icons/instagram.svg" alt="instagram" />
-                        </a>
+                    <div class="col-2 align-content-end">
+                        <div class="row justify-content-between">
+                            <a href="https://twitter.com/aztecataxes" target="_blank">
+                                <img src="../rsc/icons/twitter.svg" alt="twitter" />
+                            </a>
+                            <a href="https://www.facebook.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/facebook.svg" alt="facebook" />
+                            </a>
+                            <a href="https://www.instagram.com/aztecataxsystems/" target="_blank">
+                                <img src="../rsc/icons/instagram.svg" alt="instagram" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -98,7 +100,7 @@
             <h2 class="text-center">We support you in every step through the process.</h2>
         </header>
 
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center text-center m-0">
             <div class="col-11 col-md-8 mt-5 mb-5">
                 <h2>We offer remote desktop assistance!</h2>
                 <h3 class="mt-4">
@@ -106,14 +108,14 @@
                     software.
                 </h3>
 
-                <a href="https://download.teamviewer.com/download/TeamViewer_Setup_x64.exe" class="btn btn-primary mt-5"
-                    tabindex="-1" role="button">
+                <a href="https://download.teamviewer.com/download/TeamViewer_Setup_x64.exe"
+                    class="btn btn-primary btn-lg mt-5" tabindex="-1" role="button">
                     Download Teamviewer
                 </a>
             </div>
         </div>
 
-        <div class="row justify-content-center text-center mb-5">
+        <div class="row justify-content-center text-center m-0 mb-5">
             <div class="col-8">
                 <div class="row align-items-center cont-info  p-5">
                     <div class="col-12 col-md-6">
@@ -203,24 +205,5 @@
         background-size: cover;
         background-position-y: center;
         color: white;
-    }
-
-    .cont-info {
-        background: #f2b138;
-        border-radius: 8px;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .titulo {
-        font-size: 3em;
-    }
-
-    .cont-info {
-        font-size: 1.3em;
-    }
-
-    .orange {
-        color: #f2b138
     }
 </style>
